--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -120,6 +120,7 @@ jobs:
       uses: actions/checkout@v2
       with:
         fetch-depth: 0 
+        ref: ${{ github.event.pull_request.head.sha }}
     - name: Go Build Cache
       uses: actions/cache@v2
       with:
