Restore when deploy/test run ready for merge to main

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,10 +1,8 @@
 on:
-  push:
-    branches:
-      - thisisnotabranchdontrunplease
+  pull_request:
   workflow_dispatch:
 
-concurrency: 
+concurrency:
   group: ${{ github.head_ref }}
   cancel-in-progress: true
 
