--- a/.github/actions/gitops-binary/action.yaml
+++ b/.github/actions/gitops-binary/action.yaml
@@ -5,11 +5,11 @@ inputs:
     description: 'where shall it go?'
     required: true
     default: /tmp/gitops
-  os:
+  runs-on:
     description: "`macOS-latest` or `ubuntu-latest`"
     required: false
     default: "ubuntu-latest"
-  os_name:
+  os-name:
     description: "`linux` or `darwin`"
     required: false
     default: "linux"
@@ -19,12 +19,12 @@ runs:
     - shell: bash
       name: Download gitops binary from s3
       run: |
-        wget https://weave-gitops.s3.us-east-2.amazonaws.com/gitops-${{ inputs.os }}        
-        mv gitops-${{ inputs.os }} ${{ inputs.path }}
+        wget https://weave-gitops.s3.us-east-2.amazonaws.com/gitops-${{ inputs.runs-on }}        
+        mv gitops-${{ inputs.runs-on }} ${{ inputs.path }}
         sudo chmod +x ${{ inputs.path }}
 
-        # curl -LO https://github.com/weaveworks/weave-gitops/releases/download/v0.5.0-rc2/gitops-${{ inputs.os_name }}-x86_64.tar.gz
-        # tar -xf gitops-${{ inputs.os_name }}-x86_64.tar.gz
+        # curl -LO https://github.com/weaveworks/weave-gitops/releases/download/v0.5.0-rc2/gitops-${{ inputs.os-name }}-x86_64.tar.gz
+        # tar -xf gitops-${{ inputs.os-name }}-x86_64.tar.gz
         # mv gitops ${{ inputs.path }}
 
         # Print out Version
