point acceptance-test.yaml workflow to be called from main

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -83,7 +83,7 @@ jobs:
   
   acceptance-tests:
     needs: [build, coverage]
-    uses: weaveworks/weave-gitops-enterprise/.github/workflows/acceptance-test.yaml@unify-acceptance-test-jobs-action
+    uses: weaveworks/weave-gitops-enterprise/.github/workflows/acceptance-test.yaml@main
     with:
       runs-on: ubuntu-latest
       os-name: linux
